--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.version=6.0.0
 logging.level.org.springframework=DEBUG
 
+  # enabling multipart uploads 
+spring.servlet.multipart.enabled=true
+
+   #max file size 
+spring.servlet.multipart.max-file-size=300MB
+
+  #threshhold after which files writen to disk
+  spring.servlet.multipart.file-size-threshold=1KB
 
 
